{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 267,
  "lineage": "2223b7ba-007f-9159-b00f-25db431d1f15",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "KafkaServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dee22c13ea7a9a67",
            "arn": "arn:aws:ec2:ap-south-1:815349656216:instance/i-0f88838ff6c40925b",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f88838ff6c40925b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d63a4cc8eff9e58b",
            "private_dns": "ip-10-0-16-240.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.16.240",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c61c95b623580d81",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fe77661aa129fe1a",
            "tags": {
              "Name": "KafkaServer"
            },
            "tags_all": {
              "Name": "KafkaServer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-041b17d3b36b20ec2"
            ]
          },
          "dependencies": [
            "aws_subnet.PrivateSubnet",
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "NoteService",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dee22c13ea7a9a67",
            "arn": "arn:aws:ec2:ap-south-1:815349656216:instance/i-09af319d0f11bfd95",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09af319d0f11bfd95",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c812581d55247dfc",
            "private_dns": "ip-10-0-27-106.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.27.106",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08d88912ae2779ed9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0adaec743e20e8e2c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fe77661aa129fe1a",
            "tags": {
              "Name": "NoteService"
            },
            "tags_all": {
              "Name": "NoteService"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0adaec743e20e8e2c"
            ]
          },
          "dependencies": [
            "aws_security_group.user-note-service-sg",
            "aws_subnet.PrivateSubnet",
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "UserService",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dee22c13ea7a9a67",
            "arn": "arn:aws:ec2:ap-south-1:815349656216:instance/i-0ee508adbbf750b06",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ee508adbbf750b06",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-079c8a5d07d8eb061",
            "private_dns": "ip-10-0-26-112.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.26.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c14d2f06b674a62f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0adaec743e20e8e2c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fe77661aa129fe1a",
            "tags": {
              "Name": "UserService"
            },
            "tags_all": {
              "Name": "UserService"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0adaec743e20e8e2c"
            ]
          },
          "dependencies": [
            "aws_security_group.user-note-service-sg",
            "aws_subnet.PrivateSubnet",
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ZookeeperServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dee22c13ea7a9a67",
            "arn": "arn:aws:ec2:ap-south-1:815349656216:instance/i-05fbc35d7cbf0ba1f",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05fbc35d7cbf0ba1f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d9d992a778c56baa",
            "private_dns": "ip-10-0-16-109.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.16.109",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09c8c4bf088b7c607",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fe77661aa129fe1a",
            "tags": {
              "Name": "ZookeeperServer"
            },
            "tags_all": {
              "Name": "ZookeeperServer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-041b17d3b36b20ec2"
            ]
          },
          "dependencies": [
            "aws_subnet.PrivateSubnet",
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_for_DemoVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:815349656216:internet-gateway/igw-0c6058f248dc31831",
            "id": "igw-0c6058f248dc31831",
            "owner_id": "815349656216",
            "tags": {
              "Name": "igw_for_DemoVPC"
            },
            "tags_all": {
              "Name": "igw_for_DemoVPC"
            },
            "vpc_id": "vpc-0f2454030dd6cfb53"
          },
          "dependencies": [
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb-user-note-application",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:815349656216:loadbalancer/app/alb-user-note-application/60b32f81001d6caf",
            "arn_suffix": "app/alb-user-note-application/60b32f81001d6caf",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-user-note-application-580119972.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:815349656216:loadbalancer/app/alb-user-note-application/60b32f81001d6caf",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-user-note-application",
            "preserve_host_header": false,
            "security_groups": [
              "sg-075db231204b8c7a4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0660ab4353d85055b"
              },
              {
                "subnet_id": "subnet-0bcb455bb0dac390b"
              }
            ],
            "subnets": [
              "subnet-0660ab4353d85055b",
              "subnet-0bcb455bb0dac390b"
            ],
            "vpc_id": "vpc-0f2454030dd6cfb53",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.PublicSubnet1",
            "aws_subnet.PublicSubnet2",
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg-noteservice",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:815349656216:targetgroup/tg-noteservice/a4abc383241ce660",
            "arn_suffix": "targetgroup/tg-noteservice/a4abc383241ce660",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:815349656216:targetgroup/tg-noteservice/a4abc383241ce660",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-noteservice",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f2454030dd6cfb53"
          },
          "dependencies": [
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg-userservice",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:815349656216:targetgroup/tg-userservice/8ca2704e86338101",
            "arn_suffix": "targetgroup/tg-userservice/8ca2704e86338101",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:815349656216:targetgroup/tg-userservice/8ca2704e86338101",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-userservice",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f2454030dd6cfb53"
          },
          "dependencies": [
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachment-tg-noteservice",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:815349656216:targetgroup/tg-noteservice/a4abc383241ce660-20241126073957346400000003",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:815349656216:targetgroup/tg-noteservice/a4abc383241ce660",
            "target_id": "i-09af319d0f11bfd95"
          },
          "dependencies": [
            "aws_instance.NoteService",
            "aws_lb_target_group.tg-noteservice",
            "aws_security_group.user-note-service-sg",
            "aws_subnet.PrivateSubnet",
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachment-tg-userservice",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:815349656216:targetgroup/tg-userservice/8ca2704e86338101-20241126074026797200000004",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:815349656216:targetgroup/tg-userservice/8ca2704e86338101",
            "target_id": "i-0ee508adbbf750b06"
          },
          "dependencies": [
            "aws_instance.UserService",
            "aws_lb_target_group.tg-userservice",
            "aws_security_group.user-note-service-sg",
            "aws_subnet.PrivateSubnet",
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RouteTableForPrivateSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:815349656216:route-table/rtb-058641f3322d7341a",
            "id": "rtb-058641f3322d7341a",
            "owner_id": "815349656216",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "RouteTableForPrivateSubnet"
            },
            "tags_all": {
              "Name": "RouteTableForPrivateSubnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f2454030dd6cfb53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RouteTableForPublicSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:815349656216:route-table/rtb-0bec92592f85d1025",
            "id": "rtb-0bec92592f85d1025",
            "owner_id": "815349656216",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c6058f248dc31831",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RouteTableForPublicSubnet1"
            },
            "tags_all": {
              "Name": "RouteTableForPublicSubnet1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f2454030dd6cfb53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_for_DemoVPC",
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RouteTableForPublicSubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:815349656216:route-table/rtb-0974fc4145cfcd713",
            "id": "rtb-0974fc4145cfcd713",
            "owner_id": "815349656216",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c6058f248dc31831",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RouteTableForPublicSubnet2"
            },
            "tags_all": {
              "Name": "RouteTableForPublicSubnet2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f2454030dd6cfb53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_for_DemoVPC",
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_route_table_to_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b9915593ed41db4",
            "route_table_id": "rtb-058641f3322d7341a",
            "subnet_id": "subnet-0fe77661aa129fe1a"
          },
          "dependencies": [
            "aws_route_table.RouteTableForPrivateSubnet",
            "aws_subnet.PrivateSubnet",
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_route_table_to_public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d3724457950fea8",
            "route_table_id": "rtb-0bec92592f85d1025",
            "subnet_id": "subnet-0bcb455bb0dac390b"
          },
          "dependencies": [
            "aws_internet_gateway.igw_for_DemoVPC",
            "aws_route_table.RouteTableForPublicSubnet1",
            "aws_subnet.PublicSubnet1",
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_route_table_to_public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085423fa4f36d84f9",
            "route_table_id": "rtb-0974fc4145cfcd713",
            "subnet_id": "subnet-0660ab4353d85055b"
          },
          "dependencies": [
            "aws_internet_gateway.igw_for_DemoVPC",
            "aws_route_table.RouteTableForPublicSubnet2",
            "aws_subnet.PublicSubnet2",
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:815349656216:security-group/sg-075db231204b8c7a4",
            "description": "sg for alb",
            "egress": [],
            "id": "sg-075db231204b8c7a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "815349656216",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f2454030dd6cfb53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kafka-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:815349656216:security-group/sg-0b5f81fe73bc712c1",
            "description": "sg for kafka server",
            "egress": [],
            "id": "sg-0b5f81fe73bc712c1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0adaec743e20e8e2c"
                ],
                "self": false,
                "to_port": 9092
              }
            ],
            "name": "kafka-sg",
            "name_prefix": "",
            "owner_id": "815349656216",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kafka-sg"
            },
            "tags_all": {
              "Name": "kafka-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f2454030dd6cfb53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "user-note-service-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:815349656216:security-group/sg-0adaec743e20e8e2c",
            "description": "sg for user and note servers",
            "egress": [],
            "id": "sg-0adaec743e20e8e2c",
            "ingress": [],
            "name": "user-note-service-sg",
            "name_prefix": "",
            "owner_id": "815349656216",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "for-user-note-service-sg"
            },
            "tags_all": {
              "Name": "for-user-note-service-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f2454030dd6cfb53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "zookeeper-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:815349656216:security-group/sg-0f2df37fed8749d8e",
            "description": "sg for zookeeper server",
            "egress": [],
            "id": "sg-0f2df37fed8749d8e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2181,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b5f81fe73bc712c1"
                ],
                "self": false,
                "to_port": 2181
              }
            ],
            "name": "zookeeper-sg",
            "name_prefix": "",
            "owner_id": "815349656216",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "zookeeper-sg"
            },
            "tags_all": {
              "Name": "zookeeper-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f2454030dd6cfb53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:815349656216:subnet/subnet-0fe77661aa129fe1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe77661aa129fe1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "815349656216",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet"
            },
            "tags_all": {
              "Name": "PrivateSubnet"
            },
            "vpc_id": "vpc-0f2454030dd6cfb53"
          },
          "dependencies": [
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:815349656216:subnet/subnet-0bcb455bb0dac390b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bcb455bb0dac390b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "815349656216",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet1"
            },
            "tags_all": {
              "Name": "PublicSubnet1"
            },
            "vpc_id": "vpc-0f2454030dd6cfb53"
          },
          "dependencies": [
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:815349656216:subnet/subnet-0660ab4353d85055b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0660ab4353d85055b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "815349656216",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet2"
            },
            "tags_all": {
              "Name": "PublicSubnet2"
            },
            "vpc_id": "vpc-0f2454030dd6cfb53"
          },
          "dependencies": [
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "DemoVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:815349656216:vpc/vpc-0f2454030dd6cfb53",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-086405cf8c283384b",
            "default_route_table_id": "rtb-0520e3676e0eeab32",
            "default_security_group_id": "sg-041b17d3b36b20ec2",
            "dhcp_options_id": "dopt-03b98f6d70fbf9b1e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f2454030dd6cfb53",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0520e3676e0eeab32",
            "owner_id": "815349656216",
            "tags": {
              "Name": "DemoVPC"
            },
            "tags_all": {
              "Name": "DemoVPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow-inbound-at-80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:815349656216:security-group-rule/sgr-0876524dff44a4bf2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0876524dff44a4bf2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-075db231204b8c7a4",
            "security_group_rule_id": "sgr-0876524dff44a4bf2",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "for-kafka-allow-inbound-at-9092",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:815349656216:security-group-rule/sgr-0df4d58ab87bff338",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 9092,
            "id": "sgr-0df4d58ab87bff338",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0adaec743e20e8e2c",
            "security_group_id": "sg-0b5f81fe73bc712c1",
            "security_group_rule_id": "sgr-0df4d58ab87bff338",
            "tags": null,
            "tags_all": {},
            "to_port": 9092
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.kafka-sg",
            "aws_security_group.user-note-service-sg",
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "for-user-note-service-allow-inbound-at-8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:815349656216:security-group-rule/sgr-0075c64c0157d5386",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-0075c64c0157d5386",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-075db231204b8c7a4",
            "security_group_id": "sg-0adaec743e20e8e2c",
            "security_group_rule_id": "sgr-0075c64c0157d5386",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_security_group.user-note-service-sg",
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "for-zookeeper-allow-inbound-at-2181",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:815349656216:security-group-rule/sgr-0c9480a83147658fb",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 2181,
            "id": "sgr-0c9480a83147658fb",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0b5f81fe73bc712c1",
            "security_group_id": "sg-0f2df37fed8749d8e",
            "security_group_rule_id": "sgr-0c9480a83147658fb",
            "tags": null,
            "tags_all": {},
            "to_port": 2181
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.kafka-sg",
            "aws_security_group.zookeeper-sg",
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    }
  ]
}